--- a/test-1.html
+++ b/test-1.html
@@ -1442,113 +1442,48 @@
           </div>
         </div>
 
+
+
         <div style="margin-top: 22px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
-          <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-            Summary (Tracking Scope)
-          </h4>
-          <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-            Round-level scoring data is logged across competitive events for cumulative freshman-season reference, including <b>field-relative scoring position, round variance, and counting score availability</b>. Course context (<b>par, yardage, field scoring averages</b>) and UTSA travel-squad lineup/counted rounds are archived. Technical inputs introduced under <b>Bryan Gathright</b> are documented within longitudinal performance logs.
-          </p>
-        </div>
+  <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="18" y1="20" x2="18" y2="10"></line>
+      <line x1="12" y1="20" x2="12" y2="4"></line>
+      <line x1="6" y1="20" x2="6" y2="14"></line>
+    </svg>
+    Summary (Tracking Scope)
+  </h4>
 
-        <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
-          <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-            <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Context Notes</div>
-          </div>
-          <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
-            Competitive rounds reflect the application of technical directives implemented following Fall review, including swing-plane adjustments and decision-making patterns on Par-4 holes. Post-event performance data was reviewed using Clippd and Scoreboard metrics to document round-level outputs. At the Compadres Collegiate, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>.
-          </div>
-        </div>
-
-        <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box;">
-          <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 4, 2026</span>
-        </div>
-      </div>
-
-    </div>
-  </div>
+  <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+    All competitive rounds during the 2026 freshman spring season are logged at the round level for cumulative reference, including <b>field-relative scoring position, round variance, and counting score availability</b>. Event context (<b>course par, yardage, and field scoring averages</b>) and UTSA travel-squad lineup designation are archived with each round. At the Compadres Collegiate (Iberostar Playa Paraíso GC, Par 72, 6,683 yards), all three rounds were recorded as counting scores, with an event result of <b>Even Par relative to the field scoring baseline</b>. Cumulative counting score rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season)</b>. Technical inputs introduced under <b>Bryan Gathright</b> are maintained within longitudinal performance logs.
+  </p>
 </div>
 
-<div class="witb-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-
-  <div style="margin-bottom: 40px; padding: 0 15px;">
-    <h3 style="font-size: 16px; color: #0c2340; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
-      <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #f1e6d0;">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M6 12h9"></path>
-          <path d="M11 7l-2 2-2-2"></path>
-          <path d="M9 9v10"></path>
-          <rect x="5" y="3" width="14" height="18" rx="2"></rect>
-          <path d="M9 3v4"></path>
-          <path d="M15 3v4"></path>
-        </svg>
-      </div>
-      <span>WHAT'S IN THE BAG</span>
-    </h3>
-    
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px; margin-bottom: 12px;">
-      <div style="background: #0c2340; color: white; padding: 20px; border-radius: 12px; display: flex; flex-direction: column; justify-content: space-between; min-height: 120px; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.15);">
-        <div>
-          <div style="font-size: 10px; opacity: 0.7; margin-bottom: 6px; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">Driver</div>
-          <div style="font-size: 15px; font-weight: 900;">Titleist GT3 (9.0°)</div>
-        </div>
-        <div style="font-size: 11px; padding-top: 12px; border-top: 1px solid rgba(255,255,255,0.15); color: #c98a2e; font-weight: 600; line-height: 1.4;">
-          Ventus Black 6 TR (X)<br><span style="font-size: 9px; opacity: 0.8; font-weight: 400;">VeloCore, Std Tip</span>
-        </div>
-      </div>
-
-      <div style="background: #f8fafc; border: 1px solid #e2e8f0; padding: 20px; border-radius: 12px; display: flex; flex-direction: column; justify-content: space-between; min-height: 120px;">
-        <div>
-          <div style="font-size: 10px; color: #64748b; margin-bottom: 6px; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">Fairway Wood</div>
-          <div style="font-size: 15px; font-weight: 900; color: #0c2340;">Titleist GT3 (16.5°)</div>
-        </div>
-        <div style="font-size: 11px; padding-top: 12px; border-top: 1px solid #e2e8f0; color: #475569; font-weight: 600; line-height: 1.4;">
-          Ventus Black 6 TR (X)<br><span style="font-size: 9px; color: #94a3b8; font-weight: 400;">VeloCore, Std Tip</span>
-        </div>
-      </div>
-    </div>
-
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px; margin-bottom: 12px;">
-      <div style="background: #f8fafc; border: 1px solid #e2e8f0; padding: 20px; border-radius: 12px; display: flex; flex-direction: column; justify-content: space-between; min-height: 120px;">
-        <div>
-          <div style="font-size: 10px; color: #64748b; margin-bottom: 6px; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">Irons (Combo)</div>
-          <div style="font-size: 15px; font-weight: 900; color: #0c2340;">Titleist 620 MB & CB</div>
-        </div>
-        <div style="font-size: 11px; padding-top: 12px; border-top: 1px solid #e2e8f0; color: #475569; font-weight: 600;">
-          4-6: CB | 7-PW: MB<br><span style="font-size: 9px; color: #94a3b8; font-weight: 400;">Precision Forged</span>
-        </div>
-      </div>
-
-      <div style="background: #f8fafc; border: 1px solid #e2e8f0; padding: 20px; border-radius: 12px; display: flex; flex-direction: column; justify-content: space-between; min-height: 120px;">
-        <div>
-          <div style="font-size: 10px; color: #64748b; margin-bottom: 6px; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">Wedges</div>
-          <div style="font-size: 15px; font-weight: 900; color: #0c2340;">Vokey SM10 Nickel</div>
-        </div>
-        <div style="font-size: 11px; padding-top: 12px; border-top: 1px solid #e2e8f0; color: #475569; font-weight: 600; line-height: 1.4;">
-          46, 50, 54, 58 (M/F Grinds)<br><span style="font-size: 9px; color: #94a3b8; font-weight: 400;">KBS C-Taper 125 S+</span>
-        </div>
-      </div>
-    </div>
-
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px;">
-      <div style="background: #f8fafc; border: 1px solid #e2e8f0; padding: 20px; border-radius: 12px; display: flex; align-items: center; justify-content: space-between;">
-        <div>
-          <div style="font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">Putter</div>
-          <div style="font-size: 15px; font-weight: 900; color: #0c2340;">Phantom 9.5</div>
-        </div>
-        <div style="font-size: 11px; color: #64748b; border-left: 2px solid #cbd5e1; padding-left: 12px; font-weight: 800; text-transform: uppercase;">Black</div>
-      </div>
-      
-      <div style="background: #ffffff; border: 2px solid #c98a2e; padding: 20px; border-radius: 12px; display: flex; align-items: center; justify-content: center; gap: 15px; box-shadow: 0 4px 15px rgba(201, 138, 46, 0.1);">
-        <div style="font-size: 10px; color: #c98a2e; font-weight: 900; text-transform: uppercase; letter-spacing: 1.5px;">Ball</div>
-        <div style="font-size: 16px; font-weight: 900; color: #000; letter-spacing: -0.5px;">Titleist Pro V1</div>
-      </div>
+<div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
+  <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10"></circle>
+      <polyline points="12 6 12 12 16 14"></polyline>
+    </svg>
+    <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">
+      Context Notes
     </div>
   </div>
 
+  <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
+    Competitive rounds reflect the application of technical directives implemented following Fall review, including swing-plane adjustments and course-management decision patterns by hole type. Post-event performance data was reviewed using Clippd and Scoreboard to document round-level outputs. At the Compadres Collegiate, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>, and archived as part of the cumulative freshman-season dataset.
+  </div>
 </div>
+
+<div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box;">
+  <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">
+    Last Updated: Feb. 4, 2026
+  </span>
+</div>
+
+
+
+
 
 
 
