--- a/test-1.html
+++ b/test-1.html
@@ -1343,8 +1343,23 @@
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div class="roster-standings-section" style="width: 100%; margin: 0 auto 40px; padding: 0; box-sizing: border-box;">
-    <div style="margin-bottom: 25px; padding: 0; box-sizing: border-box;">
+  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box; width: 100%;">
+    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0;">
+      <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
+        PERFORMANCE & STRATEGY ANALYSIS
+      </h3>
+      <p style="margin: 8px 0 0 0; color: #806600; font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
+        (2026 Freshman Spring Season)
+      </p>
+    </div>
+    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box;">
+      <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb 4, 2026</span>
+    </div>
+  </div>
+
+  <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
+    <div style="margin-bottom: 25px; box-sizing: border-box;">
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
         UTSA TEAM ROSTER STANDINGS 
@@ -1352,7 +1367,7 @@
       </h3>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box;">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
       <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Team Rank (Avg)</span>
         <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">#1 (72.0)</span>
@@ -1374,25 +1389,8 @@
     </div>
   </div>
 
-  <div class="insight-section" style="width: 100%; margin: 0 auto 40px; padding: 0; box-sizing: border-box;">
-    <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box;">
-      <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0;">
-        <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
-          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
-          PERFORMANCE & STRATEGY ANALYSIS
-        </h3>
-        <p style="margin: 8px 0 0 0; color: #806600; font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
-          (2026 Freshman Spring Season)
-        </p>
-      </div>
-      <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box;">
-        <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb 4, 2026</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="advanced-analysis-section" style="width: 100%; margin: 0 auto 60px; padding: 0; box-sizing: border-box;">
-    <div style="margin-bottom: 25px; padding: 0; box-sizing: border-box;">
+  <div class="advanced-analysis-section" style="width: 100%; margin-bottom: 60px; box-sizing: border-box;">
+    <div style="margin-bottom: 25px; box-sizing: border-box;">
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
         ADVANCED COMPETITIVE ANALYSIS 
@@ -1400,7 +1398,7 @@
       </h3>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box;">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
       <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Performance</span>
         <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
@@ -1433,7 +1431,7 @@
       </div>
     </div>
 
-    <div style="margin-top: 25px; background: #ffffff; padding: 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
+    <div style="margin-top: 25px; background: #ffffff; padding: 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
       <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
         Summary (Tracking Scope)
@@ -1443,7 +1441,7 @@
       </p>
     </div>
 
-    <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
+    <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
       <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
         <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Context Notes</div>
@@ -1453,7 +1451,7 @@
       </div>
     </div>
 
-    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box;">
+    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box; width: 100%;">
       <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 4, 2026</span>
     </div>
   </div>
