--- a/test-1.html
+++ b/test-1.html
@@ -1422,7 +1422,8 @@
     </div>
   </div>
 
-  <div style="width: 100%; margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box;">
+
+<div style="width: 100%; margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box;">
     <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0; box-sizing: border-box;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
@@ -1440,25 +1441,30 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
         Summary (Tracking Scope)
       </h4>
-<div style="margin-top: 12px; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.4; width: 100%; text-align: center; box-sizing: border-box;">
-  Team contribution is defined as the share of Clippd (w) Points among participating team members.<br>
-  Note: Team Total reflects participating team-member entries (Individual-only entries excluded).
-</div>
+      <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+        <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level for cumulative freshman-season reference. Recorded metrics include field-relative scoring position, round variance, and counting score designation.<br><br>
+        <b>Course Context & Lineup Records:</b> Event-specific course data (par, yardage, and field scoring averages) is archived with each competition. Rounds competed as part of the UTSA travel squad are logged with corresponding team lineup and counting score status.<br><br>
+        <b>Technical Documentation:</b> Technical inputs introduced under <b>Bryan Gathright</b> are recorded within longitudinal performance logs. Swing-related variables and competitive scoring outputs are tracked as part of the cumulative freshman-season dataset.<br><br>
+        <b>Event Record — Compadres Collegiate:</b> Rounds were played at Iberostar Playa Paraíso GC (Par 72, 6,683 yards). Field scoring averages were recorded at 77.10 overall (R1: 78.04 | R2: 77.25 | R3: 76.00). All three rounds were logged as counting scores. Event scoring outcome was recorded as <b>Even Par relative to the field scoring baseline</b>.<br><br>
+        <b>Scoring Record Summary:</b> Counting score rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
+      </p>
     </div>
 
     <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
       <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Context Notes</div>
+        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Post-Round Review & Data Archiving</div>
       </div>
       <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
-        Competitive rounds reflect the application of technical directives implemented following Fall review, including swing-plane adjustments and course-management decision patterns by hole type. Post-event performance data was reviewed using Clippd and Scoreboard to document round-level outputs. At the Compadres Collegiate, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>, and archived as part of the cumulative freshman-season dataset.
+        Round-by-round scoring data and field averages are archived for reference and ongoing metric calibration. Post-event performance data was reviewed using Clippd and Scoreboard. At the Compadres Collegiate, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>.
       </div>
     </div>
 
     <div style="text-align: right; padding-top: 15px; margin-top: 18px; border-top: 1px solid #edf2f7; box-sizing: border-box; width: 100%;">
       <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
     </div>
+  </div>
+  
   </div>
 </div>
 
