--- a/test-1.html
+++ b/test-1.html
@@ -1421,31 +1421,30 @@
   </div>
 
 
-<div style="width: 100%; margin-bottom: 10px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box;">
-<div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0; box-sizing: border-box;">
-  <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 10px;">
-    <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px; white-space: nowrap;">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
-      PERFORMANCE & STRATEGY ANALYSIS
-    </h3>
-    <p style="margin: 0; color: #806600; font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; white-space: nowrap;">
-      (Freshman Season — 15-Round Cumulative)
-    </p>
-  </div>
-</div>
-  </div>
-  
-  <div style="text-align: right; padding-top: 15px; margin-top: 18px; border-top: 1px solid #edf2f7; box-sizing: border-box; width: 100%;">
-      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
+<div style="width: 100%; margin-bottom: 15px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 18px 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box;">
+  <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
+    <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 10px;">
+      <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px; white-space: nowrap;">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
+        PERFORMANCE & STRATEGY ANALYSIS
+      </h3>
+      <p style="margin: 0; color: #806600; font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; white-space: nowrap;">
+        (Fr. Season — 15-Round Cumulative)
+      </p>
     </div>
   </div>
   
-  <div style="width: 100%; box-sizing: border-box;">
-    <div style="margin-top: 25px; background: #ffffff; padding: 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
-      <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-        Summary (Tracking Scope)
-      </h4>
+  <div style="text-align: right; padding-top: 10px; margin-top: 10px; border-top: 1px solid #edf2f7; box-sizing: border-box; width: 100%;">
+    <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
+  </div>
+</div>
+
+<div style="width: 100%; box-sizing: border-box;">
+  <div style="margin-top: 10px; background: #ffffff; padding: 20px 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
+    <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+      Summary (Tracking Scope)
+    </h4>
       <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
         <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level for cumulative freshman-season reference. Recorded metrics include field-relative scoring position, round variance, and counting score designation.<br><br>
         <b>Course Context & Lineup Records:</b> Event-specific course data (par, yardage, and field scoring averages) is archived with each competition. Rounds competed as part of the UTSA travel squad are logged with corresponding team lineup and counting score status.<br><br>
