--- a/test-1.html
+++ b/test-1.html
@@ -1445,13 +1445,13 @@
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
       Summary (Tracking Scope)
     </h4>
-      <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level for cumulative freshman-season reference. Recorded metrics include field-relative scoring position, round variance, and counting score designation.<br><br>
-        <b>Course Context & Lineup Records:</b> Event-specific course data (par, yardage, and field scoring averages) is archived with each competition. Rounds competed as part of the UTSA travel squad are logged with corresponding team lineup and counting score status.<br><br>
-        <b>Technical Documentation:</b> Technical inputs introduced under <b>Bryan Gathright</b> are recorded within longitudinal performance logs. Swing-related variables and competitive scoring outputs are tracked as part of the cumulative freshman-season dataset.<br><br>
-        <b>Event Record — Compadres Collegiate:</b> Rounds were played at Iberostar Playa Paraíso GC (Par 72, 6,683 yards). Field scoring averages were recorded at 77.10 overall (R1: 78.04 | R2: 77.25 | R3: 76.00). All three rounds were logged as counting scores. Event scoring outcome was recorded as <b>Even Par relative to the field scoring baseline</b>.<br><br>
-        <b>Scoring Record Summary:</b> Counting score rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
-      </p>
+    <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+  <b>Performance Tracking & Metrics:</b> All <b>competitive rounds</b> are logged at the round level for cumulative freshman-season reference. Recorded metrics include <b>field-relative scoring position, round variance, and counting score designation</b>.<br><br>
+  <b>Course Context & Lineup Records:</b> <b>Event-specific course data</b> (par, yardage, and field scoring averages) is archived with each competition. Rounds competed as part of the <b>UTSA travel squad</b> are logged with corresponding team lineup and counting score status.<br><br>
+  <b>Technical Documentation:</b> Technical inputs introduced under <b>Bryan Gathright</b> are recorded within <b>longitudinal performance logs</b>. Swing-related variables and competitive scoring outputs are tracked as part of the cumulative freshman-season dataset.<br><br>
+  <b>Event Record — Compadres Collegiate:</b> Rounds were played at <b>Iberostar Playa Paraíso GC</b> (Par 72, 6,683 yards). Field scoring averages were recorded at <b>77.10 overall</b> (R1: 78.04 | R2: 77.25 | R3: 76.00). All three rounds were logged as <b>counting scores</b>. Event scoring outcome was recorded as <b>Even Par relative to the field scoring baseline</b>.<br><br>
+  <b>Scoring Record Summary:</b> <b>Counting score rate</b> is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
+</p>
     </div>
 
     <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
@@ -1459,9 +1459,9 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
         <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Post-Round Review & Data Archiving</div>
       </div>
-      <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
-        Round-by-round scoring data and field averages are archived for reference and ongoing metric calibration. Post-event performance data was reviewed using Clippd and Scoreboard. At the Compadres Collegiate, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>.
-      </div>
+    <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
+  <b>Round-by-round scoring data</b> and <b>field averages</b> are archived for reference and ongoing <b>metric calibration</b>. Post-event performance data was reviewed using <b>Clippd</b> and <b>Scoreboard</b>. At the <b>Compadres Collegiate</b>, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>.
+</div>
     </div>
   
   </div>
